--- a/index.html
+++ b/index.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/Logo/Logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Fuentes de Google -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <!-- Usamos siempre esta organización de etiquetas para la optimización del SEO -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Toldos Andalucia</title>
 
-    <title>Toldos Andalucia</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <!-- Fuentes de Google -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet" />
+
+  <link rel="icon" type="image/svg+xml" href="/assets/Logo/Logo.png" />
+
+  <!-- Descripcion para la ayuda del SEO -->
+  <meta name="robots" content="index, follow">
+  <meta name="description" content="Empresa experta en la medición, fabricación e instalación de toldos en la zona de Andalucía, Málaga">
+  <link rel="canonical" href="https://toldosandalucia.com/">
+
+  <!-- Open Graph (Facebook ) -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://toldosandalucia.com/">
+  <meta property="og:title" content="Toldos Andalucía | Diseño, Fabricación e Instalación de Toldos en Málaga">
+  <meta property="og:description" content="Expertos en diseño, fabricación e instalación de toldos a medida en Málaga. Protege tu hogar o negocio con soluciones de calidad y estilo.">
+  <meta property="og:image" content="https://toldosandalucia.com/assets/Fondo/fondo_inicio.jpeg">
+  <meta property="og:site_name" content="Toldos Andalucía">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
